<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_novice_guidance"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:tag="default"
    android:visibility="visible">

    <LinearLayout
        android:id="@+id/ll_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="160dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivLeft"
            android:layout_width="270dp"
            android:layout_height="394dp"
            android:layout_gravity="center"
            android:src="@mipmap/usb_video_light_adjust_overlay2" />

        <LinearLayout
            android:id="@+id/llLeftContent"
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:background="@drawable/icon_novice_guidance_bg1"
            android:orientation="vertical">

            <com.desaysv.moduleusbvideo.view.MarqueeTextView
                android:id="@+id/tv_novice_left"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="-18dp"
                android:ellipsize="marquee"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:singleLine="true"
                android:text="@string/novice_guidance_left"
                android:textColor="@color/usbvideo_white"
                android:textSize="30sp" />

            <com.desaysv.moduleusbvideo.view.MarqueeTextView
                android:id="@+id/tv_novice_left_1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:ellipsize="marquee"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:singleLine="true"
                android:text="@string/novice_guidance_adjust_brightness"
                android:textColor="@color/usbvideo_white"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@mipmap/drop_n" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@mipmap/drop_d" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@mipmap/drop_d" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivContent"
            android:layout_width="629dp"
            android:layout_height="224dp"
            android:layout_gravity="center"
            android:src="@mipmap/usb_video_fast_adjust_overlay2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="236dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/icon_novice_guidance_bg2"
            android:orientation="vertical">

            <com.desaysv.moduleusbvideo.view.MarqueeTextView
                android:id="@+id/tv_novice_content"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="-15dp"
                android:ellipsize="marquee"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:singleLine="true"
                android:text="@string/novice_guidance_content"
                android:textColor="@color/usbvideo_white"
                android:textSize="30sp" />

            <com.desaysv.moduleusbvideo.view.MarqueeTextView
                android:id="@+id/tv_novice_content_1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:ellipsize="marquee"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:singleLine="true"
                android:text="@string/novice_guidance_adjust_forward_and_backward"
                android:textColor="@color/usbvideo_white"
                android:textSize="30sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@mipmap/drop_d" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@mipmap/drop_n" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@mipmap/drop_d" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="160dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llRightContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/icon_novice_guidance_bg3"
            android:orientation="vertical">

            <com.desaysv.moduleusbvideo.view.MarqueeTextView
                android:id="@+id/tv_novice_right"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:ellipsize="marquee"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:singleLine="true"
                android:text="@string/novice_guidance_right"
                android:textColor="@color/usbvideo_white"
                android:textSize="30sp" />

            <com.desaysv.moduleusbvideo.view.MarqueeTextView
                android:id="@+id/tv_novice_right_1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:ellipsize="marquee"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:singleLine="true"
                android:text="@string/novice_guidance_adjust_adjust_sound"
                android:textColor="@color/usbvideo_white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_got_it"
                android:layout_width="288dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:background="@null"
                android:text="@string/novice_guidance_got_it"
                android:textAllCaps="false"
                android:textColor="@color/usbvideo_common_gray"
                android:textSize="30sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="270dp"
            android:layout_height="394dp"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:src="@mipmap/usb_video_light_adjust_overlay2" />


    </LinearLayout>


</RelativeLayout>