<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <RelativeLayout
        android:id="@+id/roo_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:longClickable="true"
        android:orientation="vertical">

        <TextureView
            android:id="@+id/ttv_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/no_video_show"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/no_video_show"
            android:textColor="@color/usbvideo_white"
            android:textSize="38sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/error_show"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/no_error_show"
            android:textColor="@color/usbvideo_white"
            android:textSize="38sp"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/rl_controller"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="110dp">

            <LinearLayout
                android:id="@+id/ll_video_play_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/usb_video_while_back"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/video_name"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@color/usbvideo_white"
                    android:textSize="34sp"
                    tools:text="啥的赛季" />

            </LinearLayout>

            <SeekBar
                android:id="@+id/sb_time"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_above="@id/ll_controller"
                android:layout_marginStart="40dp"
                android:maxHeight="6dp"
                android:progressDrawable="@drawable/progress_main"
                android:splitTrack="false"
                android:thumb="@mipmap/usb_video_thumb"
                tools:max="100"
                tools:progress="50" />

            <RelativeLayout
                android:id="@+id/ll_controller"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:textColor="@color/usbvideo_white"
                    android:textSize="28sp"
                    tools:text="00:00/00:00" />

                <LinearLayout
                    android:id="@+id/ll_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btn_pre"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/usb_video_last"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/btn_play_or_pause"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="100dp"
                        android:layout_marginEnd="100dp"
                        android:src="@drawable/usb_video_play"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/btn_next"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/usb_video_next"
                        android:textSize="20sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_double_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="83dp"
                    android:layout_toStartOf="@id/tv_anthology"
                    android:gravity="center|start"
                    android:text="@string/double_speed"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_anthology"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="center|start"
                    android:text="@string/anthology"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:visibility="visible" />

            </RelativeLayout>
        </RelativeLayout>

        <!--    亮度调节、音量调节-->
        <LinearLayout
            android:id="@+id/ll_setting_adjust"
            android:layout_width="740dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:background="@drawable/shape_slide_bg"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_adjust_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="25dp"
                android:src="@mipmap/adjust_light" />

            <SeekBar
                android:id="@+id/pb_adjust_progress"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginEnd="30dp"
                android:maxHeight="6dp"
                android:progressDrawable="@drawable/progress_main"
                android:splitTrack="false"
                android:thumb="@mipmap/usb_video_thumb"
                tools:max="100"
                tools:progress="50" />
        </LinearLayout>

        <!--  预览图-->
        <LinearLayout
            android:id="@+id/ll_pre_view"
            android:layout_width="652dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/rl_pre_view_root"
                android:layout_width="652dp"
                android:layout_height="272dp">

                <TextureView
                    android:id="@+id/tv_pre_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_cur_total_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_pre_view_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingTop="10dp"
                android:paddingEnd="25dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/tv_pre_view_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/usbvideo_white"
                    android:textSize="34sp"
                    tools:text="09:09" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" / "
                    android:textColor="@color/usbvideo_common_gray"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/tv_pre_view_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/usbvideo_common_gray"
                    android:textSize="34sp"
                    tools:text="09:09" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <!--    新手引导-->
    <com.desaysv.moduleusbvideo.view.NoviceGuidanceView
        android:id="@+id/ngv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>
